# helovalo

./: README.md  helovalo.cabal
src/: ByteStringDeep.hs  Effects.hs  Elocmd.hs  Elovalo.hs  ElovaloInternal.hs  Fractional.hs  Main.hs  serial.c  serial.h
src/Interface/: JsonRpc.hs
