name:          helovalo
version:       0.0.1
synopsis:      Toolset for accessing Elovalo device from Linux
description:   Contains tools for accessing Elovalo device via UART under
	       Linux. Contains JSON-RPC, UDP and Unix socket interface.
category:      Utils
license:       GPL-3
license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen+elovalo@iki.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/elovalo/helovalo.git

executable elovalod
  hs-source-dirs: src
  main-is:        Main.hs
  c-sources:      src/serial.c
  build-depends:
    base >= 4.2.0.2,
    binary >= 0.5.1.0,
    binary-bits >= 0.1,
    bytestring >= 0.9.2.1,
    deepseq >= 1.3.0.0,
    directory >= 1.0.1.1,
    filepath >= 1.2.0.1,
    stm >= 2.2.0.1,
    unix >= 2.5.1.0,
    aeson >= 0.6.0.0,
    blaze-builder >= 0.3.1.0,
    attoparsec >= 0.10.1.1,
    attoparsec-conduit >= 0.2.0,
    http-types >= 0.6.9,
    warp >= 1.1.0.1,
    wai >= 1.1.0.1,
    conduit >= 0.2.0,
    transformers >= 0.2.2.0
